--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;600&family=Manrope:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body data-theme="dark">
@@ -20,7 +21,9 @@
         <div class="eyebrow-wrap">
           <span class="eyebrow">Интернет и костыли</span>
         </div>
-        <button class="icon-btn theme-icon" id="theme-toggle" type="button" aria-label="Переключить тему">🌙</button>
+        <button class="icon-btn theme-icon" id="theme-toggle" type="button" aria-label="Переключить тему">
+          <i class="fa-solid fa-moon" aria-hidden="true"></i>
+        </button>
       </div>
       <h1>100+ забавных фактов из мира сетей, железа и игр</h1>
       <div class="content-grid">
@@ -38,7 +41,9 @@
         <aside class="random-card">
           <div class="random-head">
             <div class="random-left">
-              <button type="button" class="icon-btn" id="random-btn" aria-label="Новый факт">🔀</button>
+              <button type="button" class="icon-btn" id="random-btn" aria-label="Новый факт">
+                <i class="fa-solid fa-shuffle" aria-hidden="true"></i>
+              </button>
               <span class="random-title">Рандомный факт</span>
             </div>
           </div>
